--- a/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -154,15 +154,6 @@
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
 12541=Attention ! Vous vous apprêtez à envoyer un message de %d octets. Voulez-vous vraiment envoyer ce message ?
 
-## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Saisissez votre mot de passe pour %S :
-
-## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Saisissez votre mot de passe pour %S sur %S :
-
-## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Connexion au serveur…
-
 ## @name NS_MSG_SENDING_MESSAGE
 12550=Envoi du message…
 
@@ -235,9 +226,6 @@
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=Une erreur est survenue lors de l'envoi du courrier :impossible d'obtenir le mot de passe pour « %S ». Le message n'a pas été envoyé.
-
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=Le mot de passe du serveur SMTP est requis
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=La taille du message que vous essayez d'envoyer excède une taille limite temporaire du serveur. Le message n'a pas été envoyé ; essayez de réduire la taille du message ou attendez un peu et essayez à nouveau. Le serveur a répondu : « %s ».
@@ -351,3 +339,12 @@ attachmentReminderKeywordsMsgs=Mot-clé de pièce jointe trouvé :;#1 mots-clés
 attachmentReminderOptionsMsg=Les mots de rappel de pièce jointe peuvent être configurés dans les préférences
 attachmentReminderYesIForgot=Oui
 attachmentReminderFalseAlarm=Non, envoyer maintenant
+
+## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
+## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Saisissez votre mot de passe pour %S :
+## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
+## words %1$S and %2$S. Place the word %1$S where the host name should appear,
+## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Saisissez votre mot de passe pour %2$S sur %1$S:
+smtpEnterPasswordPromptTitle=Le mot de passe pour le serveur SMTP est requis
