--- a/nb-NO/mail/chrome/messenger/filter.properties
+++ b/nb-NO/mail/chrome/messenger/filter.properties
@@ -6,6 +6,7 @@ cannotHaveDuplicateFilterTitle=Filternavn finnes fra før
 cannotHaveDuplicateFilterMessage=Filternavnet du har angitt finnes allerede. Skriv et annet filternavn.
 deleteFilterConfirmation=Er du sikker på at du vil slette dette filteret?
 untitledFilterName=Navnløst filter
+matchAllFilterName=Vis alle meldinger
 filterListBackUpMsg=Filtrene dine virker ikke fordi msgFilterRules.dat-filen, som inneholder filtrene dine, kunne ikke bli funnet. En ny msgFilterRules.dat vil bli opprettet, og en sikkerhetskopi av den gamle filen, rulesbackup.dat, vil bli lagt i den samme mappen.
 customHeaderOverflow=Du har brukt mer enn 50 egendefinerte meldingshoder. Fjern ett eller flere av dem og prøv igjen.
 filterCustomHeaderOverflow=Filtrene dine har oversteget grensen på 50 egendefinerte meldingshoder. Rediger msgFilterRules.dat, som inneholder filtrene dine, og bruk færre av dem.
@@ -51,3 +52,8 @@ filterAction15=meldingstekst hentet fra POP3-tjener
 filterAction16=kopiert til mappe
 filterAction17=med etikett
 filterAction18=ignorert undertråd
+# LOCALIZATION NOTE(filterAutoNameStr)
+# %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
+# %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
+# %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=%1$S %2$S: %3$S
