--- a/nb-NO/mail/chrome/messenger/localMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/localMsgs.properties
@@ -38,14 +38,21 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Skriv inn passordet
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Skriv inn passordet for %1$S på %2$S:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Skriv inn et nytt passord for brukeren %1$S på %2$S:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Det er ikke nok diskplass til å laste ned de nye meldingene. Prøv å slette gamle e-post, tøm søppelkassen, og komprimere e-postmappene, og prøv igjen.
-
-# Out of memory
-## @name LOCAL_OUT_OF_MEMORY
-## @loc None
--1000=Programmet har ikke mer minne
 
 # Status - parsing folder
 ## @name LOCAL_STATUS_SELECTING_MAILBOX
@@ -136,30 +143,6 @@
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=DELE-kommandoen feilet. Feil ved merking av en melding som slettet.
 
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Skriv inn passordet for %1$s på %2$s\:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Skriv inn nytt passord for brukeren %.100s på %.100s\:
-
-## @name POP3_NO_ANSWER
-## @loc None
-4019=Fikk ikke svar
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Skriv inn passord\:
-
-## @name POP3_FOLDER_FOR_TRASH
-## @loc None
-4023=Søppelkassen inneholdt allerede en mappe med navn %s. Mappen du slettet, kan bli funnet i søppelkassen under det nye navnet %s.
-
 # Status - stat failed
 ## @name POP3_STAT
 ## @loc None
@@ -168,10 +151,6 @@
 ## @name POP3_SERVER_SAID
 ## @loc None
 4025= E-posttjeneren %S svarte\:
-
-## @name DELETING_MSGS_STATUS
-## @loc None
-4026=Sletter %S av %S meldinger
 
 ## @name COPYING_MSGS_STATUS
 ## @loc None
@@ -190,10 +169,6 @@
 ## @name CANNOT_PROCESS_SECURE_AUTH
 ## @loc None
 4030=E-posttjeneren støtter ikke sikker autentisering.
-
-## @name MOVEMAIL_SPOOL_FILE_LOCKED
-## @loc None
-4032=Spool-filen %S er låst.
 
 ## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
 ## @loc None
