--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -509,3 +509,11 @@ glodaSearch_results_why_contact=Kontakt
 glodaSearch_results_why_subject=Emne
 glodaSearch_results_why_body=Innhold
 glodaSearch_results_why_attachment=Vedlegg
+
+mailServerLoginFailedTitle=Innlogging feilet
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Innlogging til %S feilet.
+mailServerLoginFailedRetryButton=&Forsøk igjen
+mailServerLoginFailedEnterNewPasswordButton=&Skriv inn nytt passord
