--- a/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -154,15 +154,6 @@
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
 12541=Advarsel\! Du vil nå sende en melding som er %d byte stor. Er du sikker på at du vil gjøre dette?
 
-## @name NS_SMTP_PASSWORD_PROMPT1
-12543=Skriv inn passordet ditt for %S:
-
-## @name NS_SMTP_PASSWORD_PROMPT2
-12544=Skriv inn passordet for %S på %S:
-
-## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Kobler til tjener …
-
 ## @name NS_MSG_SENDING_MESSAGE
 12550=Sender melding …
 
@@ -236,9 +227,6 @@
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=Klarte ikke sende post: Klarte ikke hente passordet for %S. Meldingen ble ikke sendt.
 
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=SMTP-tjener krever passord
-
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=Størrelsen på meldingen du forsøker å sende er større enn en midlertidig størrelsesbegrensing på tjeneren. Meldingen ble ikke sendt; gjør meldingen mindre, eller vent en stund og prøv igjen. Tjeneren svarte:  %s.
 
@@ -274,7 +262,7 @@ chooseFileToAttach=Legg ved fil(er)
 ##
 windowTitlePrefix=E-post:
 
-## String used by the empty subject dialog
+## Strings used by the empty subject dialog
 subjectEmptyTitle=Emnepåminnelse
 subjectEmptyMessage=Meldingen har ikke noe emne.
 sendWithEmptySubjectButton=&Send meldingen uten emne
@@ -337,8 +325,27 @@ renameAttachmentMessage=Nytt navn på vedlegget:
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
 mail.compose.attachment_reminder_keywords=vedlegg,vedlagt,resyme,søknad,attachment,attached,.doc,.pdf,resume,cover letter
+
+addAttachmentButton=Legg til vedlegg …
+addAttachmentButton.accessskey=L
+remindLaterButton=Minn meg på senere
+remindLaterButton.accessskey=M
+
 attachmentReminderTitle=Vedleggspåminnelse
 attachmentReminderMsg=Glemte du å legge ved en fil?
+# LOCALIZATION NOTE (attachmentReminderKeywordsMsgs): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of keywords
+attachmentReminderKeywordsMsgs=Nøkkelord for vedleggspåminnelse:;Fant #1 nøkkelord for vedleggspåminnelse:
+attachmentReminderOptionsMsg=Vedleggspåminnelsesord kan endres i innstillingene
 attachmentReminderYesIForgot=Åh, ja, det glemte jeg!
 attachmentReminderFalseAlarm=Nei, send nå
 
+## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
+## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Skriv inn passordet for %S:
+## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
+## words %1$S and %2$S. Place the word %1$S where the host name should appear,
+## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Skriv inn passordet for %2$S på %1$S:
+smtpEnterPasswordPromptTitle=Passord påkrevd for SMTP-tjener
