--- a/de/mail/chrome/messenger/localMsgs.properties
+++ b/de/mail/chrome/messenger/localMsgs.properties
@@ -7,12 +7,12 @@ pop3EnterPasswordPromptTitle=Geben Sie Ihr Passwort ein
 # LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
 # and "%2$S" below. Place the word %1$S where the user name should appear, and
 # %2$S where the host name should appear.
-pop3EnterPasswordPrompt=Geben Sie Ihr Passwort für %1$S auf %2$S ein:
+pop3EnterPasswordPrompt=Geben Sie Ihr Passwort für '%1$S' auf %2$S ein:
 
 # LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
 # translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
 # user name should appear, and %2$S where the host name should appear.
-pop3PreviouslyEnteredPasswordIsInvalidPrompt=Geben Sie ein neues Passwort für Benutzer %1$S auf %2$S ein:
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Geben Sie Ihr Passwort für '%1$S' auf %2$S erneut ein:
 
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
