--- a/de/mail/chrome/messenger/accountCreation.properties
+++ b/de/mail/chrome/messenger/accountCreation.properties
@@ -25,12 +25,12 @@ found_config=Konfiguration für Ihr Konto gefunden
 checking_mozilla_config=Konfigurationen der Mozilla Community durchsuchen…
 found_isp_config=Konfiguration gefunden
 probing_config=Konfiguration wird getestet…
-guessing_from_email=Vermutliche Konfiguration erraten…
+guessing_from_email=Vermutliche Konfiguration ermitteln…
 config_details_found=Konfigurationsdetails wurden gefunden!
 config_unverifiable=Konfiguration konnte nicht überprüft werden — ist der Benutzername oder das Passwort falsch?
 incoming_found_specify_outgoing=Die Konfiguration für den Posteingang wurden gefunden. Bitte geben Sie noch die Serveradresse für den Postausgang ein.
 outgoing_found_specify_incoming=Die Konfiguration für den Postausgang wurden gefunden. Bitte geben Sie noch die Serveradresse für den Posteingang ein.
-please_enter_missing_hostnames=Die Konfiguration konnte nicht erraten werden — bitte geben Sie die fehlenden Serveradressen ein.
+please_enter_missing_hostnames=Die Konfiguration konnte nicht ermittelt werden — bitte geben Sie die fehlenden Serveradressen ein.
 incoming_failed_trying_outgoing=Der Posteingang-Server konnte nicht automatisch konfiguriert werden, für den Postausgang wird es weiter versucht…
 outgoing_failed_trying_incoming=Der Postausgang-Server konnte nicht automatisch konfiguriert werden, für den Posteingang wird es weiter versucht…
 checking_password=Passwort wird getestet…
