--- a/nl/mail/chrome/messenger/localMsgs.properties
+++ b/nl/mail/chrome/messenger/localMsgs.properties
@@ -38,6 +38,18 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Voer uw wachtwoord in
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Voer uw wachtwoord in voor %1$S op %2$S:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Voer een nieuw wachtwoord in voor gebruiker %1$S op %2$S:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Er is niet genoeg schijfruimte om nieuwe berichten te downloaden. Verwijder oude e-mail, leeg de prullenbak, comprimeer uw e-mailmappen en probeer het vervolgens opnieuw.
@@ -135,26 +147,6 @@
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=Het DELE-commando had geen succes. Fout bij markeren van een bericht als verwijderd.
-
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Voer uw wachtwoord in voor %1$s op %2$s:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Voer een nieuw wachtwoord in voor gebruiker %.100s op %.100s:
-
-## @name POP3_NO_ANSWER
-## @loc None
-4019=Geen antwoord
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Voer uw wachtwoord in:
 
 ## @name POP3_FOLDER_FOR_TRASH
 ## @loc None
