--- a/nl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -337,7 +337,15 @@ renameAttachmentMessage=Nieuwe bijlagenaam:
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
 mail.compose.attachment_reminder_keywords=.doc,.pdf,bijlage,toegevoegd,toevoegen,bijgevoegd,CV,brief
+
+addAttachmentButton=Bijlage toevoegen…
+addAttachmentButton.accessskey=B
+remindLaterButton=Herinner me later
+remindLaterButton.accessskey=H
+
 attachmentReminderTitle=Bijlage herinnering
 attachmentReminderMsg=Bent u vergeten om een bijlage toe tevoegen?
+attachmentReminderKeywordsMsg=Bijlage sleutelwoord gevonden: ;Bijlage sleutelwoorden gevonden: 
+attachmentReminderOptionsMsg=Bijlage herinneringswoorden kunnen worden geconfigureerd in uw voorkeuren
 attachmentReminderYesIForgot=Oh, inderdaad!
 attachmentReminderFalseAlarm=Nee, nu verzenden
