--- a/fr/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/fr/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -94,7 +94,7 @@
 ## @loc None
 # LOCALIZATION NOTE (2008): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the name of the address book.
-2008=Carnet d'adresses %S importé
+2008=Carnet d'adresses %S importé.
 
 # Error message
 ## @name EUDORAIMPORT_ADDRESS_BADPARAM
@@ -120,7 +120,6 @@
 ## @loc None
 # LOCALIZATION NOTE (2012): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the mobile phone number.
-
 2012=Portable personnel : %S
 
 # Description
@@ -128,7 +127,6 @@
 ## @loc None
 # LOCALIZATION NOTE (2013): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the mobile phone number.
-
 2013=Portable professionnel : %S
 
 # Description
@@ -136,7 +134,6 @@
 ## @loc None
 # LOCALIZATION NOTE (2014): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the fax phone number.
- 
 2014=Fax domicile : %S
  
 # Description
@@ -144,25 +141,21 @@
 ## @loc None
 # LOCALIZATION NOTE (2015): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the fax phone number.
-
 2015=Fax professionnel : %S
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHEREMAIL
 ## @loc None
-
 2016=Autre adresse électronique :
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHERPHONE
 ## @loc None
-
 2017=Autre téléphone :
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_OTHERWEB
 ## @loc None
-
 2018=Autre site Web :
 
 # Description
@@ -171,7 +164,7 @@
 # LOCALIZATION NOTE (2019): This warning is displayed when one of Eudora's outgoing
 # filters is attempted to be imported.  Outgoing filters are ones which are
 # processed when a message is being sent, and are not supported.
-2019=impossible d'importer le contexte pour les filtres sortants
+2019=Impossible d'importer le contexte pour les filtres sortants.
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_ACTION
@@ -179,7 +172,7 @@
 # LOCALIZATION NOTE (2020): This warning is displayed if the action cannot be imported
 # The "action" is what is done to the message if the filter matches, e.g. transfer to
 # a mailbox, change the priority.  The %S will be replaced with the name of the action.
-2020=impossible d'importer l'action « %S »
+2020=Impossible d'importer l'action « %S ».
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_VERB
@@ -187,14 +180,14 @@
 # LOCALIZATION NOTE (2021): This warning is displayed if the verb cannot be imported.
 # The "verb" is how filters match the header to the text, e.g. "contains", "is",
 # "begins with".  The %s will be replaced with the name of the verb.
-2021=impossible d'importer le mot « %s »
+2021=impossible d'importer le mot « %s ».
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_EMPTY_HEADER
 ## @loc None
 # LOCALIZATION NOTE (2027): This warning is displayed when the name of the header to be
 # filtered against cannot be found.
-2027=nom d'en-tête non trouvé
+2027=nom d'en-tête non trouvé.
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_NEGATE_VERB
@@ -202,7 +195,7 @@
 # LOCALIZATION NOTE (2023): This warning is displayed when a filter term needs to be
 # no corresponding "doesn't start with" verb.  The %S will be replaced with the name of
 # the verb.
-2023=impossible d'inverser le mot « %S »
+2023=impossible d'inverser le mot « %S ».
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_META_HEADER
@@ -211,7 +204,7 @@
 # cannot be supported.  Pseudo-headers are things that can match mutiple headers, e.g.
 # "Any Header", or non-header info, e.g. "Junk Score".  The %S will be replaced with
 # the name of the pseudo-header.
-2028=impossible d'importer le pseudo-en-tête « %S »
+2028=impossible d'importer le pseudo-en-tête « %S ».
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_MAILBOX_MISSING
@@ -219,4 +212,4 @@
 # LOCALIZATION NOTE (2025): This warning is displayed when a filter has an action to
 # transfer the message to a mailbox, but the named mailbox doesn't exist.  The %S will
 # be replaced with the name of the mailbox.
-2025=impossible de trouver la boîte à lettres « %S »
+2025=impossible de trouver la boîte à lettres « %S ».
