--- a/fr/mail/chrome/messenger/importMsgs.properties
+++ b/fr/mail/chrome/messenger/importMsgs.properties
@@ -41,62 +41,62 @@
 # Success message when no address books are found to import
 ## @name IMPORT_NO_ADDRBOOKS
 ## @loc None
-2000=Aucun carnet d'adresses à importer
+2000=Aucun carnet d'adresses à importer.
 
 # Error: Address book import not intialized
 ## @name IMPORT_ERROR_AB_NOTINITIALIZED
 ## @loc None
-2001=Impossible d'importer les carnets d'adresses : erreur d'initialisation
+2001=Impossible d'importer les carnets d'adresses : erreur d'initialisation.
 
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_AB_NOTHREAD
 ## @loc None
-2002=Impossible d'importer les carnets d'adresses : création du fil d'importation impossible
+2002=Impossible d'importer les carnets d'adresses : création du fil d'importation impossible.
 
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_GETABOOK
 ## @loc None
 # LOCALIZATION NOTE (Error 2003): Do not translate the word "%S" below.
-2003=Erreur lors de l'importation de %S, impossible de créer le carnet d'adresses
+2003=Erreur lors de l'importation de %S, impossible de créer le carnet d'adresses.
 
 # Success message when no mailboxes are found to import
 ## @name IMPORT_NO_MAILBOXES
 ## @loc None
-2004=Aucune boîte aux lettres à importer
+2004=Aucune boîte aux lettres à importer.
 
 # Error: Mailbox import not intialized
 ## @name IMPORT_ERROR_MB_NOTINITIALIZED
 ## @loc None
-2005=Impossible d'importer la boîte aux lettres : erreur d'initialisation
+2005=Impossible d'importer la boîte aux lettres : erreur d'initialisation.
 
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_MB_NOTHREAD
 ## @loc None
-2006=Impossible d'importer la boîte aux lettres : création du fil d'importation impossible
+2006=Impossible d'importer la boîte aux lettres : création du fil d'importation impossible.
 
 # Error: Unable to create the proxy object for importing mailboxes
 ## @name IMPORT_ERROR_MB_NOPROXY
 ## @loc None
-2007=Impossible d'importer la boîte aux lettres, création de l'objet proxy pour la boîte de destination impossible
+2007=Impossible d'importer la boîte aux lettres, création de l'objet proxy pour la boîte de destination impossible.
 
 # Error: Error creating destination mailboxes
 ## @name IMPORT_ERROR_MB_FINDCHILD
 ## @loc None
 # LOCALIZATION NOTE (Error 2008): Do not translate the word "%S" below.
 # Place %S in your translation where the name of the mailbox should appear.
-2008=Erreur lors de la création de la boîte aux lettres de destination : impossible de trouver la boîte %S
+2008=Erreur lors de la création de la boîte aux lettres de destination : impossible de trouver la boîte %S.
 
 # Error: Error creating destination mailboxes
 ## @name IMPORT_ERROR_MB_CREATE
 ## @loc None
 # LOCALIZATION NOTE (Error 2009): Do not translate the word "%S" below.
 # Place %S in your translation where the name of the mailbox should appear.
-2009=Erreur lors de l'importation de la boîte %S, impossible de créer la boîte de destination
+2009=Erreur lors de l'importation de la boîte %S, impossible de créer la boîte de destination.
 
 # Error: No destination folder to import mailboxes
 ## @name IMPORT_ERROR_MB_NODESTFOLDER
 ## @loc None
-2010=Impossible de créer un compte dans lequel importer le courrier
+2010=Impossible de créer un compte dans lequel importer le courrier.
 
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC_START
@@ -287,20 +287,20 @@
 ImportAlreadyInProgress=Une opération d'importation est en cours ; essayez à nouveau lorsque cette opération sera terminée.
 
 #Error strings for settings import
-ImportSettingsBadModule=Impossible de charger le module des paramètres
+ImportSettingsBadModule=Impossible de charger le module des paramètres.
 ImportSettingsNotFound=Impossible de trouver les paramètres. Vérifiez que cette application est installée sur votre ordinateur.
 ImportSettingsFailed=Erreur lors de l'importation des paramètres. Certains, sinon la totalité, des paramètres risquent de ne pas avoir été importés.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportSettingsSuccess=Les paramètres ont été importés à partir de %S
+ImportSettingsSuccess=Les paramètres ont été importés à partir de %S.
 
 #Error string for mail import
 ImportMailBadModule=Impossible de charger le module d'importation du courrier.
 ImportMailNotFound=Impossible de trouver du courrier à importer. Vérifiez que l'application de courrier est correctement installée sur votre ordinateur.
 ImportEmptyAddressBook=Impossible d'importer le carnet d'adresses %S car il est vide.
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
-ImportMailFailed=Une erreur est survenue lors de l'importation du courrier à partir de %S
+ImportMailFailed=Une erreur est survenue lors de l'importation du courrier à partir de %S.
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
-ImportMailSuccess=Le courrier a été importé avec succès à partir de %S
+ImportMailSuccess=Le courrier a été importé avec succès à partir de %S.
 
 # Error string for address import
 ImportAddressBadModule=Impossible de charger le module d'importation des carnets d'adresses.
@@ -326,8 +326,8 @@ MailProgressMeterText=Conversion de boîtes aux lettres à partir de %S
 AddrProgressMeterText=Conversion des carnets d'adresses à partir de %S
 
 #Import file dialog strings
-ImportSelectSettings=Sélectionner le fichier des paramètres
-ImportSelectMailDir=Sélectionner le répertoire du courrier
+ImportSelectSettings=Sélectionner le fichier des paramètres.
+ImportSelectMailDir=Sélectionner le répertoire du courrier.
 ImportSelectAddrDir=Sélectionner le répertoire du carnet d'adresses.
 ImportSelectAddrFile=Sélectionner le fichier du carnet d'adresses.
 
@@ -340,7 +340,7 @@ Comm4xImportName=Communicator 4.x
 Comm4xFiles=Fichiers de carnet d'adresses Communicator (*.na2)
 
 # Folder Names for imported Mail
-DefaultFolderName=Courrier importé
+DefaultFolderName=Courrier importé.
 # LOCALIZATION NOTE: Do not translate the word "%S" below.
 ImportModuleFolderName=Importation %S
 
@@ -349,4 +349,3 @@ ImportModuleFolderName=Importation %S
 # strings profile dialog that comes up when importing mail from 4.x
 profileTitle=Profils Communicator 4.x
 profileText=Choisissez le profil qui contient le courrier local que vous souhaitez importer :
-
