--- a/fr/mail/chrome/messenger/oeImportMsgs.properties
+++ b/fr/mail/chrome/messenger/oeImportMsgs.properties
@@ -57,7 +57,7 @@
 ## LOCALIZATION NOTE (2002): In this item, don't translate "%S" or "%d"
 ## The variable %S will contain the name of the Mailbox
 ## The variable %d will contain the number of messages
-2002=Boîte aux lettres %S, %d message(s) importé(s)
+2002=Boîte aux lettres %S, %d message(s) importé(s).
 
 # Error message
 ## @name OEIMPORT_MAILBOX_BADPARAM
@@ -93,7 +93,7 @@
 ## @loc None
 ## LOCALIZATION NOTE (2006): In this item, don't translate "%S"
 ## The variable %S will receive the name of the address book
-2008=Carnet d'adresses %S importé
+2008=Carnet d'adresses %S importé.
 
 # Error message
 ## @name OEIMPORT_ADDRESS_CONVERTERROR
